# ntfslib

./: CMakeLists.txt  README.md
Test/: CMakeLists.txt  README.md  main.c  unix_io.c  unix_io.h
include/: config.h  device.h  security.h  volume.h
src/: CMakeLists.txt  device.c  security.c  volume.c
